<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="wolfskaempf.de.trink.MainActivity" android:padding="16dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/text_view_progress_initial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/progess_text_view" android:textSize="60sp"
                android:layout_weight="1" android:gravity="center" android:freezesText="true"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="bottom">
        <TextView
                android:text="@string/text_view_add_liquid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/add_liquid_text_view"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="6dp">
            <Button
                    android:text="@string/button_100_ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_100ml" android:layout_weight="1"
                    android:onClick="on100mlButtonClick"/>
            <Button
                    android:text="@string/button_250_ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_250ml" android:layout_weight="1"
                    android:onClick="on250mlButtonClick"/>
            <Button
                    android:text="@string/button_500_ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_500ml" android:layout_weight="1"
                    android:onClick="on500mlButtonClick"/>
            <Button
                    android:text="@string/button_1_liter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_1l" android:layout_weight="1"
                    android:onClick="on1lButtonClick"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
